@@ -524,7 +524,11 @@ def test_build_domain_cpp_with_add_function_parentheses_is_True(app, status, war
         ('ref function without parens ', 'paren_1\(\)'),
         ('ref function with parens ', 'paren_2\(\)'),
         ('ref function without parens, explicit title ', 'paren_3_title'),
-        ('ref function with parens, explicit title ', 'paren_4_title')
+        ('ref function with parens, explicit title ', 'paren_4_title'),
+        ('ref op call without parens ', 'paren_5::operator\(\)\(\)'),
+        ('ref op call with parens ', 'paren_6::operator\(\)\(\)'),
+        ('ref op call without parens, explicit title ', 'paren_7_title'),
+        ('ref op call with parens, explicit title ', 'paren_8_title')
     ]
 
     f = 'roles.html'
@@ -562,7 +566,11 @@ def test_build_domain_cpp_with_add_function_parentheses_is_False(app, status, wa
         ('ref function without parens ', 'paren_1'),
         ('ref function with parens ', 'paren_2'),
         ('ref function without parens, explicit title ', 'paren_3_title'),
-        ('ref function with parens, explicit title ', 'paren_4_title')
+        ('ref function with parens, explicit title ', 'paren_4_title'),
+        ('ref op call without parens ', 'paren_5::operator\(\)'),
+        ('ref op call with parens ', 'paren_6::operator\(\)'),
+        ('ref op call without parens, explicit title ', 'paren_7_title'),
+        ('ref op call with parens, explicit title ', 'paren_8_title')
     ]
 
     f = 'roles.html'
